packages/typ/tests/fixtures/diagnostics/0910_gadt_pair_constructor_payload_mismatch_05.ml.expected
File "0910_gadt_pair_constructor_payload_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0910_gadt_pair_constructor_payload_mismatch_05 is not a valid module name.

File "0910_gadt_pair_constructor_payload_mismatch_05.ml", line 5, characters 54-58:
5 | let _ : (int * bool) pair_box_epsilon = Pair_epsilon (true, 4)
                                                          ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
